# seaorm-auto-migration

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: diff.rs  lib.rs  main.rs  parser.rs  reader.rs  types.rs  writer.rs
tests/: diff_test.rs  parser_test.rs  reader_index_grouping_test.rs  writer_test.rs
